upload all files

--- a/index.html
+++ b/index.html
@@ -571,6 +571,14 @@
       <summary data-i18n-key="faq_q3">มีบริการดูแลหน้างานหรือไม่?</summary>
       <div class="ans" data-i18n-key="faq_a3">เรามีทีมเทคนิคสามารถเข้าตรวจ แนะนำสูตร และวางแผนควบคุมคุณภาพบ่อชุบให้เหมาะกับมาตรฐานของลูกค้า</div>
     </details>
+    <details class="qa reveal">
+      <summary data-i18n-key="faq_q4">รับชุบงานเองด้วยหรือไม่</summary>
+      <div class="ans" data-i18n-key="faq_a4">เราไม่ได้รับชุบเอง เราจำหน่ายน้ำยาชุบเคมีภัณฑ์คุณภาพสูง พร้อมให้คำปรึกษาอย่างมืออาชีพ</div>
+    </details>
+    <details class="qa reveal">
+      <summary data-i18n-key="faq_q5">ควรเลือกชุบแบบไหน (เช่น นิกเกิล, โครเมียม, สังกะสี)?</summary>
+      <div class="ans" data-i18n-key="faq_a5">ขึ้นอยู่กับคุณสมบัติที่ต้องการ เช่น ความทนทานต่อการกัดกร่อน (สังกะสี, นิกเกิล), ความสวยงามและเงางาม (โครเมียม, ทอง), ความแข็ง (โครเมียมแข็ง) หรือ การนำไฟฟ้า (ทอง, เงิน)</div>
+    </details>
   </div>
 </section>
 
@@ -895,7 +903,11 @@ const I18N = {
     faq_q2: "ต้องเตรียมผิวก่อนชุบอย่างไร?",
     faq_a2: "ใช้เคมีกลุ่ม Pretreatment เพื่อกำจัดคราบน้ำมัน/สนิม และล้างน้ำตามให้เพียงพอ เพื่อลดปัญหาการยึดเกาะหลังการชุบ",
     faq_q3: "มีบริการดูแลหน้างานหรือไม่?",
-    faq_a3: "เรามีทีมเทคนิคสามารถเข้าตรวจ แนะนำสูตร และวางแผนควบคุมคุณภาพบ่อชุบให้เหมาะกับมาตรฐานของลูกค้า"
+    faq_a3: "เรามีทีมเทคนิคสามารถเข้าตรวจ แนะนำสูตร และวางแผนควบคุมคุณภาพบ่อชุบให้เหมาะกับมาตรฐานของลูกค้า",
+    faq_q4: "รับชุบงานเองด้วยหรือไม่?",
+    faq_a4: "เราไม่ได้รับชุบเอง เราจำหน่ายน้ำยาชุบเคมีภัณฑ์คุณภาพสูง พร้อมให้คำปรึกษาอย่างมืออาชีพ",
+    faq_q5: "ควรเลือกชุบแบบไหน (เช่น นิกเกิล, โครเมียม, สังกะสี)?",
+    faq_a5: "ขึ้นอยู่กับคุณสมบัติที่ต้องการ เช่น ความทนทานต่อการกัดกร่อน (สังกะสี, นิกเกิล), ความสวยงามและเงางาม (โครเมียม, ทอง), ความแข็ง (โครเมียมแข็ง) หรือ การนำไฟฟ้า (ทอง, เงิน)"
   }, /* ← ต้องมีคอมม่าตรงนี้ เพื่อคั่น th กับ en */
 
   en: {
@@ -954,7 +966,11 @@ const I18N = {
     faq_q2: "How should I prepare parts before plating?",
     faq_a2: "Use Pretreatment chemistries to remove oil/rust and rinse thoroughly to minimize post-plating adhesion issues.",
     faq_q3: "Do you offer on-site technical service?",
-    faq_a3: "Yes. Our technical team can audit, recommend formulas, and plan bath control to meet your quality standards."
+    faq_a3: "Yes. Our technical team can audit, recommend formulas, and plan bath control to meet your quality standards.",
+    faq_q4: "Do you also provide plating services?",
+    faq_a4: "We do not offer plating services. We supply high-quality chemical plating solutions and provide professional technical consultation.",
+    faq_q5: "Which type of plating should I choose (e.g., nickel, chrome, zinc)?",
+    faq_a5: "It depends on the desired properties, such as corrosion resistance (zinc, nickel), aesthetic appeal and shine (chrome, gold), hardness (hard chrome), or electrical conductivity (gold, silver)."
   }
 }; /* ← ปิดอ็อบเจ็กต์ I18N ด้วย ; */
 
