--- a/products.html
+++ b/products.html
@@ -273,6 +273,21 @@
     /* ===== Empty ===== */
     .empty{display:none; text-align:center; padding:38px; color:var(--muted)}
 
+    /* === Card bottom accent (green strip) === */
+.card, .why{                 /* อยากให้ทั้งการ์ดใหญ่และการ์ด .why มีขอบ */
+  position: relative;
+  overflow: hidden;          /* ให้มุมโค้งครอบแถบไว้ */
+}
+.card::after,
+.why::after{
+  content:"";
+  position:absolute;
+  left:0; right:0; bottom:0;
+  height:4px;                /* ปรับความหนาได้ */
+  background:linear-gradient(90deg, var(--brand-2), #59a286, #9bd4b9);
+  opacity:.9;
+}
+
     /* ===== Footer ===== */
     .site-footer{background:#0f172a; color:#cbd5e1; margin-top:32px}
     .site-footer a{color:#e2e8f0; text-decoration:none}
