upload all files

--- a/about-us.html
+++ b/about-us.html
@@ -477,7 +477,7 @@
     <img src="https://img5.pic.in.th/file/secure-sv1/V2676ed70008b34059.jpg" alt="ระบบยูทิลิตี้โรงงาน" loading="lazy" decoding="async">
     <img src="https://img5.pic.in.th/file/secure-sv1/V8.jpg" alt="ระบบยูทิลิตี้โรงงาน" loading="lazy" decoding="async">
   </div>
-</section>
+</section><br>
 
   <!-- ===== Bottom CTA Parallax ===== -->
   <section class="parallax" aria-label="ติดต่อทีมงาน">
