--- a/products/polishing/steel-electropolishing-solution.html
+++ b/products/polishing/steel-electropolishing-solution.html
@@ -156,6 +156,53 @@
     .footer-list li{margin:6px 0}
     .footer-bottom{border-top:1px solid rgba(148,163,184,.25);margin-top:22px;padding-top:16px;display:flex;gap:10px;align-items:center;justify-content:space-between;flex-wrap:wrap;font-size:.92rem;color:#9fb1c6}
 
+    /* Add to your CSS (หรือแทนที่บล็อกเดิม) */
+.float-line{
+  position:fixed;
+  right:16px;
+  bottom:calc(18px + env(safe-area-inset-bottom)); /* กันชนมุมจอบน iOS */
+  z-index:900; /* ถ้าอยากลอยเหนือเมนู scrim ให้ใช้ >=1501 */
+}
+.float-line a{
+  display:grid; place-items:center;
+  width:54px; height:54px; border-radius:999px;
+  background:#00c300; color:#fff; text-decoration:none; font-weight:800;
+  box-shadow:0 10px 26px rgba(0,0,0,.25);
+  animation:pulse 2.6s infinite;
+}
+.float-line a:hover,
+.float-line a:focus-visible{ transform:translateY(-1px); box-shadow:0 14px 30px rgba(0,0,0,.28) }
+.float-line a:focus-visible{ outline:2px solid #fff; outline-offset:2px }
+
+@keyframes pulse{
+  0%{box-shadow:0 0 0 rgba(0,195,0,.5)}
+  70%{box-shadow:0 0 0 18px rgba(0,195,0,0)}
+  100%{box-shadow:0 0 0 0 rgba(0,195,0,0)}
+}
+
+/* Back-to-top */
+.backtop{
+  position:fixed;
+  right:16px;
+  bottom:calc(90px + env(safe-area-inset-bottom)); /* วางเหนือปุ่ม LINE */
+  z-index:900;
+  display:none;
+}
+.backtop.show{ display:block }
+.backtop button{
+  width:44px; height:44px; border-radius:999px;
+  border:1px solid #c5d2cf; background:#fff;
+  box-shadow:0 10px 26px rgba(0,0,0,.18);
+  cursor:pointer;
+}
+.backtop button:hover,
+.backtop button:focus-visible{ transform:translateY(-1px); box-shadow:0 14px 30px rgba(0,0,0,.2) }
+
+/* ย่อขนาดบนจอเล็ก */
+@media (max-width:420px){
+  .float-line a{ width:50px; height:50px }
+  .backtop button{ width:42px; height:42px }
+}
     /* Reveal */
     .reveal{opacity:0;transform:translateY(14px);transition:opacity .5s ease,transform .5s ease}
     .reveal.show{opacity:1;transform:none}
@@ -498,6 +545,10 @@
       <div class="footer-bottom"><div data-i18n-key="footer_copy">© 2025 Baume Chemical. All rights reserved.</div></div>
     </div>
   </footer>
+
+    <div class="backtop" id="backTop"><button aria-label="กลับขึ้นด้านบน">↑</button></div>
+  <div class="float-line"><a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener" aria-label="แชท LINE">LINE</a></div>
+
   <!-- Reveal on scroll -->
   <script>
     const revealEls = document.querySelectorAll('.reveal');
@@ -896,6 +947,22 @@
 
       map.forEach(({el})=> obs.observe(el));
     })();
+      // ==== Back-to-top (เสถียร + threshold ต่ำ) ====
+(function(){
+  const backTop = document.getElementById('backTop');
+  if(!backTop) return;
+
+  function toggleBackTop(){
+    const y = window.scrollY || document.documentElement.scrollTop || 0;
+    backTop.classList.toggle('show', y > 200);  // เดิม 600 -> ลดเหลือ 200
+  }
+  toggleBackTop();
+  window.addEventListener('scroll', toggleBackTop, {passive:true});
+
+  backTop.addEventListener('click', ()=>{
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  });
+})();
   </script>
 </body>
 </html>
