upload all files

--- a/products/platingcoating/zincplating/index.html
+++ b/products/platingcoating/zincplating/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- === SEO Basics === -->
-  <title data-i18n-key="meta_title">น้ำยาชุบสังกะสี (Zinc Plating Solutions) | Baume Chemical</title>
-  <meta name="description" content="โซลูชันน้ำยาชุบสังกะสีสำหรับงานอุตสาหกรรม: Cyanide / Acid (Ammonium) / Non-Cyanide ครอบคลุมทั้งถังกลิ้งและถังแขวน เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างานจริง.">
+  <title data-i18n-key="meta_title">น้ำยาชุบซิงค์หรือสังกะสี (Zinc Plating Solutions) | Baume Chemical</title>
+  <meta name="description" content="โซลูชันน้ำยาชุบซิงค์หรือสังกะสีสำหรับงานอุตสาหกรรม: Cyanide / Acid (Ammonium) / Non-Cyanide ครอบคลุมทั้งถังกลิ้งและถังแขวน เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างานจริง.">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:locale" content="th_TH">
   <meta property="og:locale:alternate" content="en_US">
-  <meta property="og:title" content="น้ำยาชุบสังกะสี (Zinc Plating Solutions) | Baume Chemical">
+  <meta property="og:title" content="น้ำยาชุบซิงค์หรือสังกะสี (Zinc Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Cyanide / Acid (Ammonium) / Non-Cyanide สำหรับงานถังแขวนและถังกลิ้ง เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน.">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg">
@@ -385,7 +385,7 @@ body.no-scroll{ position:fixed; width:100% }
 
     <div class="hero-inner wrap" style="padding:22px 16px">
       <h1 data-i18n-key="hero_title">Zinc Plating Solution</h1>
-      <p data-i18n-key="hero_tagline">โซลูชันชุบสังกะสีสำหรับงานอุตสาหกรรม ครอบคลุมระบบไซยาไนด์ กรดแอมโมเนียม และแบบไร้ไซยาไนด์ เหมาะกับถังกลิ้ง/ถังแขวน เน้นความเงา การกระจายตัว และความทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน</p>
+      <p data-i18n-key="hero_tagline">โซลูชันชุบซิงค์หรือสังกะสีสำหรับงานอุตสาหกรรม ครอบคลุมระบบไซยาไนด์ กรดแอมโมเนียม และแบบไร้ไซยาไนด์ เหมาะกับถังกลิ้ง/ถังแขวน เน้นความเงา การกระจายตัว และความทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน</p>
 
       <!-- Pretty bullets (3 items) -->
       <div class="bullets" aria-label="Key highlights">
@@ -596,9 +596,9 @@ body.no-scroll{ position:fixed; width:100% }
     // --- i18n ---
     const I18N = {
       th:{
-        meta_title:"น้ำยาชุบสังกะสี (Zinc Plating Solutions) | Baume Chemical",
+        meta_title:"น้ำยาชุบซิงค์หรือสังกะสี (Zinc Plating Solutions) | Baume Chemical",
         hero_title:"Zinc Plating Solution",
-        hero_tagline:"โซลูชันชุบสังกะสีสำหรับงานอุตสาหกรรม ครอบคลุมระบบไซยาไนด์ กรดแอมโมเนียม และแบบไร้ไซยาไนด์ เหมาะกับถังกลิ้ง/ถังแขวน เน้นความเงา การกระจายตัว และความทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน",
+        hero_tagline:"โซลูชันชุบซิงค์หรือสังกะสีสำหรับงานอุตสาหกรรม ครอบคลุมระบบไซยาไนด์ กรดแอมโมเนียม และแบบไร้ไซยาไนด์ เหมาะกับถังกลิ้ง/ถังแขวน เน้นความเงา การกระจายตัว และความทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน",
         btn_products:"ดูหมวดผลิตภัณฑ์", btn_consult:"ปรึกษาทีมเทคนิค", btn_back:"ย้อนกลับ",
         b1:"เงาสูง กระจายผิวกว้าง", b2:"รองรับ Rack/Barrel", b3:"เลือกได้ CYA/Acid/NCN",
         sec_products:"ผลิตภัณฑ์ในกลุ่มนี้",
