--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -344,7 +344,7 @@
       <section id="system" class="reveal section-block" aria-labelledby="system-h">
         <h2 id="system-h" class="section" data-i18n-key="system_h">ระบบ ACIDZINC 99</h2>
         <div class="content">
-          <p data-i18n-key="system_p1">ออกแบบเพื่อผิวสังกะสีเงาสูง ลื่นไหล และเข้าถึงบริเวณกระแสต่ำได้ดี เหมาะทั้งถังแขวน (rack) และถังกลิ้ง (barrel) พร้อมความคุ้มค่าในการเดินระบบ</p>
+          <p data-i18n-key="system_p1">ออกแบบเพื่อผิวซิงค์หรือสังกะสีเงาสูง ลื่นไหล และเข้าถึงบริเวณกระแสต่ำได้ดี เหมาะทั้งถังแขวน (rack) และถังกลิ้ง (barrel) พร้อมความคุ้มค่าในการเดินระบบ</p>
         </div>
       </section>
 
@@ -599,7 +599,7 @@
         feat_5_t:"รองรับวัสดุหลากหลาย", feat_5_d:"เหล็กบาง ซิงค์ฉีด เหล็กอบร้อน คาร์โบไนไตรด์",
         feat_6_t:"ทนงานต่อเนื่อง", feat_6_d:"ทำงานได้แม้บ่อมีอุณหภูมิสูงจากการผลิตต่อเนื่อง",
 
-        system_h:"ระบบ ACIDZINC 99", system_p1:"ออกแบบเพื่อผิวสังกะสีเงาสูง ลื่นไหล และเข้าถึงบริเวณกระแสต่ำได้ดี เหมาะทั้งถังแขวน (rack) และถังกลิ้ง (barrel) พร้อมความคุ้มค่าในการเดินระบบ",
+        system_h:"ระบบ ACIDZINC 99", system_p1:"ออกแบบเพื่อผิวซิงค์หรือสังกะสีเงาสูง ลื่นไหล และเข้าถึงบริเวณกระแสต่ำได้ดี เหมาะทั้งถังแขวน (rack) และถังกลิ้ง (barrel) พร้อมความคุ้มค่าในการเดินระบบ",
 
         usage_h:"วิธีการใช้น้ำยา",
         usage_th_type:"ประเภทการชุบ", usage_th_rack:"ถังแขวน", usage_th_barrel:"ถังกลิ้ง",
@@ -630,13 +630,13 @@
 
         tr_h: "วิธีการแก้ไขน้ำยาชุบซิงค์กรดเบื้องต้น",
 
-      tr_burn: "<strong>ผิวไหม้บริเวณกระแสสูง (High Current Density Burning)</strong>: ปัญหานี้มักเกิดขึ้นบริเวณมุมหรือขอบของชิ้นงานที่มีกระแสไฟฟ้าไหลผ่านมากเกินไป ทำให้เกิดการสะสมของสังกะสีอย่างรวดเร็วและไม่สม่ำเสมอ สาเหตุหลักคือ กระแสไฟฟ้าสูงเกินไป, ปริมาณ Zinc หรือ ยาพื้น (Main Additive) ในน้ำยาไม่เพียงพอ, สารละลายในบ่อชุบ กวนไม่สม่ำเสมอ, ปริมาณ คลอไรด์สูงเกินไป, อุณหภูมิหรือ pH ของน้ำยาต่ำเกินไป",
+      tr_burn: "<strong>ผิวไหม้บริเวณกระแสสูง (High Current Density Burning)</strong>: ปัญหานี้มักเกิดขึ้นบริเวณมุมหรือขอบของชิ้นงานที่มีกระแสไฟฟ้าไหลผ่านมากเกินไป ทำให้เกิดการสะสมของซิงค์หรือสังกะสีอย่างรวดเร็วและไม่สม่ำเสมอ สาเหตุหลักคือ กระแสไฟฟ้าสูงเกินไป, ปริมาณ Zinc หรือ ยาพื้น (Main Additive) ในน้ำยาไม่เพียงพอ, สารละลายในบ่อชุบ กวนไม่สม่ำเสมอ, ปริมาณ คลอไรด์สูงเกินไป, อุณหภูมิหรือ pH ของน้ำยาต่ำเกินไป",
 
       tr_haze: "<strong>ผิวมัวบริเวณกระแสกลาง-ต่ำ (Low-Mid Current Density Haze)</strong>: ผิวมัวหรือด้าน มักเกิดในพื้นที่ผิวเรียบที่กระแสไฟฟ้าไหลผ่านไม่มากนัก สาเหตุคือ ยาเงา (Brightener) มีปริมาณน้อยเกินไป, อุณหภูมิของน้ำยาสูงเกินไป, ปริมาณคลอไรด์ไม่เหมาะสม หรือมีการ ปนเปื้อนโลหะหนัก และสารอินทรีย์ต่างๆ ในน้ำยา",
 
       tr_pit: "<strong>ผิวเป็นตามด (Pitting)</strong>: รูพรุนเล็กๆ บนผิวเคลือบมักเกิดขึ้นในบริเวณที่มีกระแสไฟฟ้าสูง-กลาง สาเหตุหลักเกิดจาก ยาเงามากเกินไป, คลอไรด์สูงเกินไป หรือมีการ ปนเปื้อนเหล็ก หรือสารอื่นๆ ซึ่งเป็นสาเหตุให้เกิดฟองก๊าซที่เกาะติดผิวชิ้นงานระหว่างการชุบ",
 
-      tr_spot: "<strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่ๆ (Spotting/Bare Spots)</strong>: ปัญหานี้บ่งชี้ถึงความไม่สมบูรณ์ของผิวเคลือบ สาเหตุเกิดจากการ ปนเปื้อนโครเมียม, มี ยาเงามากเกินไป หรือการ ปนเปื้อนสารอินทรีย์ ที่ทำให้เกิดฟิล์มบางๆ บนผิวชิ้นงานและขัดขวางการเกาะตัวของสังกะสี",
+      tr_spot: "<strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่ๆ (Spotting/Bare Spots)</strong>: ปัญหานี้บ่งชี้ถึงความไม่สมบูรณ์ของผิวเคลือบ สาเหตุเกิดจากการ ปนเปื้อนโครเมียม, มี ยาเงามากเกินไป หรือการ ปนเปื้อนสารอินทรีย์ ที่ทำให้เกิดฟิล์มบางๆ บนผิวชิ้นงานและขัดขวางการเกาะตัวของซิงค์หรือสังกะสี",
 
       tr_rough: "<strong>ผิวขรุขระไม่เรียบ (Rough Deposit)</strong>: ผิวเคลือบที่มีลักษณะเป็นเม็ดทรายหรือหยาบกระด้าง สาเหตุมาจาก แผ่นซิงค์ในบ่อชุบมีมากเกินไป หรือ ถุงผ้าที่ใส่แผ่นซิงค์ขาด, การ เป่าลมมากเกินไป ทำให้ตะกอนในบ่อฟุ้งกระจาย, การใช้ ยาเงาเปลือง, หรืออุณหภูมิของบ่อชุบ ร้อนเกินไป",
 
