--- a/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
@@ -274,8 +274,8 @@
     <section id="intro" class="reveal section-block" aria-labelledby="intro-h">
       <h2 id="intro-h" class="section" data-i18n-key="intro_h">ภาพรวม & หลักการทำงาน</h2>
       <div class="content">
-        <p data-i18n-key="intro_p1" data-i18n-html="true"><strong>การชุบซิงค์ไซยาไนด์</strong> คือกระบวนการชุบโลหะด้วยไฟฟ้าที่ยึดหลักการใช้สารละลายซิงค์ไซยาไนด์และโซเดียมไซยาไนด์ เพื่อเคลือบสังกะสีบนผิวโลหะ เช่น เหล็ก ให้เกิดชั้นสังกะสีบาง ๆ ที่ป้องกันสนิมและรองรับการทำสี/โครเมตต่อไป</p>
-        <p data-i18n-key="intro_p2" data-i18n-html="true">หลักการทำงาน: ชิ้นงานต่อขั้วลบ (Cathode) และแท่งสังกะสีต่อขั้วบวก (Anode) จุ่มในอิเล็กโทรไลต์ เมื่อจ่ายกระแสตรง (DC) ไอออน Zn²⁺ จะเคลื่อนไปยังผิวชิ้นงาน รับอิเล็กตรอนและตกตะกอนเป็นสังกะสี ขณะที่แอโนดสังกะสีละลายเพื่อชดเชยโลหะในบ่อ</p>
+        <p data-i18n-key="intro_p1" data-i18n-html="true"><strong>การชุบซิงค์ไซยาไนด์</strong> คือกระบวนการชุบโลหะด้วยไฟฟ้าที่ยึดหลักการใช้สารละลายซิงค์ไซยาไนด์และโซเดียมไซยาไนด์ เพื่อเคลือบซิงค์หรือสังกะสีบนผิวโลหะ เช่น เหล็ก ให้เกิดชั้นซิงค์หรือสังกะสีบาง ๆ ที่ป้องกันสนิมและรองรับการทำสี/โครเมตต่อไป</p>
+        <p data-i18n-key="intro_p2" data-i18n-html="true">หลักการทำงาน: ชิ้นงานต่อขั้วลบ (Cathode) และแท่งซิงค์หรือสังกะสีต่อขั้วบวก (Anode) จุ่มในอิเล็กโทรไลต์ เมื่อจ่ายกระแสตรง (DC) ไอออน Zn²⁺ จะเคลื่อนไปยังผิวชิ้นงาน รับอิเล็กตรอนและตกตะกอนเป็นซิงค์หรือสังกะสี ขณะที่แอโนดซิงค์หรือสังกะสีละลายเพื่อชดเชยโลหะในบ่อ</p>
       </div>
     </section>
 
@@ -384,12 +384,12 @@
         <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">การเตรียมบ่อ (Make-up)</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="makeup_s1">ทำความสะอาดถัง: เริ่มต้นด้วยการล้างทำความสะอาดถังชุบสังกะสีอย่างละเอียดเพื่อขจัดสิ่งสกปรก คราบไขมัน หรือสารเคมีตกค้างเก่าๆ ที่อาจส่งผลต่อคุณภาพของการชุบได้ เติมน้ำ: หลังจากทำความสะอาดแล้ว ให้เติมน้ำสะอาดลงไปในถังประมาณครึ่งหนึ่งของปริมาตรทั้งหมด การเติมน้ำในปริมาณนี้จะช่วยให้สามารถควบคุมความเข้มข้นของสารเคมีต่างๆ ในขั้นตอนต่อไปได้ง่ายขึ้น</li>
+            <li data-i18n-key="makeup_s1">ทำความสะอาดถัง: เริ่มต้นด้วยการล้างทำความสะอาดถังชุบซิงค์หรือสังกะสีอย่างละเอียดเพื่อขจัดสิ่งสกปรก คราบไขมัน หรือสารเคมีตกค้างเก่าๆ ที่อาจส่งผลต่อคุณภาพของการชุบได้ เติมน้ำ: หลังจากทำความสะอาดแล้ว ให้เติมน้ำสะอาดลงไปในถังประมาณครึ่งหนึ่งของปริมาตรทั้งหมด การเติมน้ำในปริมาณนี้จะช่วยให้สามารถควบคุมความเข้มข้นของสารเคมีต่างๆ ในขั้นตอนต่อไปได้ง่ายขึ้น</li>
             <li data-i18n-key="makeup_s2">แช่ล้างด้วยโซดาไฟ 2%: เตรียมสารละลายโซดาไฟ (โซเดียมไฮดรอกไซด์, NaOH) ที่มีความเข้มข้น 2% แล้วเทลงในถังระยะเวลา: ทิ้งไว้ให้โซดาไฟทำงานอย่างน้อย 12 ชั่วโมงหรือนานกว่านั้น สารละลายโซดาไฟจะช่วยทำความสะอาดและปรับสภาพผิวภายในถังการล้าง: หลังจากครบกำหนดเวลา ให้ระบายสารละลายโซดาไฟออกและล้างถังด้วยน้ำสะอาดหลายๆ ครั้งจนแน่ใจว่าไม่มีสารเคมีตกค้าง</li>
-            <li data-i18n-key="makeup_s3">เตรียมสารเคมี: ค่อยๆ เติมสารเคมีสำหรับชุบสังกะสีตามอัตราส่วนที่กำหนดลงไปในน้ำที่เตรียมไว้การละลาย: คนสารละลายอย่างสม่ำเสมอเพื่อให้สารเคมีละลายเข้ากันอย่างสมบูรณ์ การปล่อยให้เย็น: เมื่อสารเคมีละลายหมดแล้ว ให้ปล่อยสารละลายไว้จนอุณหภูมิกลับสู่ปกติก่อนดำเนินการในขั้นตอนต่อไป</li>
+            <li data-i18n-key="makeup_s3">เตรียมสารเคมี: ค่อยๆ เติมสารเคมีสำหรับชุบซิงค์หรือสังกะสีตามอัตราส่วนที่กำหนดลงไปในน้ำที่เตรียมไว้การละลาย: คนสารละลายอย่างสม่ำเสมอเพื่อให้สารเคมีละลายเข้ากันอย่างสมบูรณ์ การปล่อยให้เย็น: เมื่อสารเคมีละลายหมดแล้ว ให้ปล่อยสารละลายไว้จนอุณหภูมิกลับสู่ปกติก่อนดำเนินการในขั้นตอนต่อไป</li>
             <li data-i18n-key="makeup_s4">เติม Zinc Purifier (PURISOL): เติมสาร PURISOL ในอัตราส่วน 4 ซีซีต่อน้ำ 1 ลิตร สารนี้มีคุณสมบัติเป็น Zinc Purifier ซึ่งจะช่วยจับและตกตะกอนสิ่งเจือปนที่อาจปนอยู่ในสารละลายชุบ การคนและการพัก: คนสารละลายให้เข้ากันดี จากนั้นปล่อยทิ้งไว้ข้ามคืนเพื่อให้สิ่งเจือปนต่างๆ ตกตะกอนลงสู่ก้นถัง</li>
             <li data-i18n-key="makeup_s5">การกรอง: เมื่อสารตะกอนทั้งหมดตกลงสู่ก้นถังแล้ว ให้กรองสารละลายในถังเพื่อแยกตะกอนออก ทำให้ได้สารละลายที่ใสและบริสุทธิ์ การปรับระดับน้ำ: ปรับระดับน้ำในถังให้ได้ปริมาตรตามที่ต้องการ โดยอาจเติมน้ำสะอาดเพิ่มเข้าไปจนถึงระดับที่กำหนด เพื่อให้ความเข้มข้นของสารละลายมีความเหมาะสม</li>
-            <li data-i18n-key="makeup_s6">เติม 111B: ค่อยๆ เติมสาร 111B ลงไปในถังทีละน้อย อัตราส่วน: เติมในอัตราส่วน 1 ลิตรต่อบ่อขนาด 1,000 ลิตร สาร 111B เป็นสารเคมีสำคัญที่ช่วยเพิ่มประสิทธิภาพและควบคุมคุณภาพของการชุบสังกะสีให้ได้ผลลัพธ์ที่ดีที่สุด</li>
+            <li data-i18n-key="makeup_s6">เติม 111B: ค่อยๆ เติมสาร 111B ลงไปในถังทีละน้อย อัตราส่วน: เติมในอัตราส่วน 1 ลิตรต่อบ่อขนาด 1,000 ลิตร สาร 111B เป็นสารเคมีสำคัญที่ช่วยเพิ่มประสิทธิภาพและควบคุมคุณภาพของการชุบซิงค์หรือสังกะสีให้ได้ผลลัพธ์ที่ดีที่สุด</li>
           </ul>
         </div>
       </section>
@@ -513,8 +513,8 @@
         toc_trouble:"แนวทางแก้ปัญหา",
 
         intro_h:"ภาพรวม & หลักการทำงาน",
-        intro_p1:"<strong>การชุบซิงค์ไซยาไนด์</strong> คือกระบวนการชุบโลหะด้วยไฟฟ้าที่ยึดหลักการใช้สารละลายซิงค์ไซยาไนด์และโซเดียมไซยาไนด์ เพื่อเคลือบสังกะสีบนผิวโลหะ เช่น เหล็ก ให้เกิดชั้นสังกะสีบาง ๆ ที่ป้องกันสนิมและรองรับการทำสี/โครเมตต่อไป",
-        intro_p2:"<strong>หลักการทำงาน:</strong> ชิ้นงานต่อขั้วลบ (Cathode) และแท่งสังกะสีต่อขั้วบวก (Anode) จุ่มในอิเล็กโทรไลต์ เมื่อจ่ายกระแสตรง (DC) ไอออน Zn²⁺ จะเคลื่อนไปยังผิวชิ้นงาน รับอิเล็กตรอนและตกตะกอนเป็นสังกะสี ขณะที่แอโนดสังกะสีละลายเพื่อชดเชยโลหะในบ่อ",
+        intro_p1:"<strong>การชุบซิงค์ไซยาไนด์</strong> คือกระบวนการชุบโลหะด้วยไฟฟ้าที่ยึดหลักการใช้สารละลายซิงค์ไซยาไนด์และโซเดียมไซยาไนด์ เพื่อเคลือบซิงค์หรือสังกะสีบนผิวโลหะ เช่น เหล็ก ให้เกิดชั้นซิงค์หรือสังกะสีบาง ๆ ที่ป้องกันสนิมและรองรับการทำสี/โครเมตต่อไป",
+        intro_p2:"<strong>หลักการทำงาน:</strong> ชิ้นงานต่อขั้วลบ (Cathode) และแท่งซิงค์หรือสังกะสีต่อขั้วบวก (Anode) จุ่มในอิเล็กโทรไลต์ เมื่อจ่ายกระแสตรง (DC) ไอออน Zn²⁺ จะเคลื่อนไปยังผิวชิ้นงาน รับอิเล็กตรอนและตกตะกอนเป็นซิงค์หรือสังกะสี ขณะที่แอโนดซิงค์หรือสังกะสีละลายเพื่อชดเชยโลหะในบ่อ",
 
         features_h:"จุดเด่นของน้ำยา",
         features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
@@ -549,12 +549,12 @@
 
         /* Make-up */
         makeup_h:"การเตรียมบ่อ (Make-up)",
-        makeup_s1:"ทำความสะอาดถัง: เริ่มต้นด้วยการล้างทำความสะอาดถังชุบสังกะสีอย่างละเอียดเพื่อขจัดสิ่งสกปรก คราบไขมัน หรือสารเคมีตกค้างเก่าๆ ที่อาจส่งผลต่อคุณภาพของการชุบได้ เติมน้ำ: หลังจากทำความสะอาดแล้ว ให้เติมน้ำสะอาดลงไปในถังประมาณครึ่งหนึ่งของปริมาตรทั้งหมด การเติมน้ำในปริมาณนี้จะช่วยให้สามารถควบคุมความเข้มข้นของสารเคมีต่างๆ ในขั้นตอนต่อไปได้ง่ายขึ้น",
+        makeup_s1:"ทำความสะอาดถัง: เริ่มต้นด้วยการล้างทำความสะอาดถังชุบซิงค์หรือสังกะสีอย่างละเอียดเพื่อขจัดสิ่งสกปรก คราบไขมัน หรือสารเคมีตกค้างเก่าๆ ที่อาจส่งผลต่อคุณภาพของการชุบได้ เติมน้ำ: หลังจากทำความสะอาดแล้ว ให้เติมน้ำสะอาดลงไปในถังประมาณครึ่งหนึ่งของปริมาตรทั้งหมด การเติมน้ำในปริมาณนี้จะช่วยให้สามารถควบคุมความเข้มข้นของสารเคมีต่างๆ ในขั้นตอนต่อไปได้ง่ายขึ้น",
         makeup_s2:"แช่ล้างด้วยโซดาไฟ 2%: เตรียมสารละลายโซดาไฟ (โซเดียมไฮดรอกไซด์, NaOH) ที่มีความเข้มข้น 2% แล้วเทลงในถังระยะเวลา: ทิ้งไว้ให้โซดาไฟทำงานอย่างน้อย 12 ชั่วโมงหรือนานกว่านั้น สารละลายโซดาไฟจะช่วยทำความสะอาดและปรับสภาพผิวภายในถังการล้าง: หลังจากครบกำหนดเวลา ให้ระบายสารละลายโซดาไฟออกและล้างถังด้วยน้ำสะอาดหลายๆ ครั้งจนแน่ใจว่าไม่มีสารเคมีตกค้าง",
-        makeup_s3:"เตรียมสารเคมี: ค่อยๆ เติมสารเคมีสำหรับชุบสังกะสีตามอัตราส่วนที่กำหนดลงไปในน้ำที่เตรียมไว้การละลาย: คนสารละลายอย่างสม่ำเสมอเพื่อให้สารเคมีละลายเข้ากันอย่างสมบูรณ์ การปล่อยให้เย็น: เมื่อสารเคมีละลายหมดแล้ว ให้ปล่อยสารละลายไว้จนอุณหภูมิกลับสู่ปกติก่อนดำเนินการในขั้นตอนต่อไป",
+        makeup_s3:"เตรียมสารเคมี: ค่อยๆ เติมสารเคมีสำหรับชุบซิงค์หรือสังกะสีตามอัตราส่วนที่กำหนดลงไปในน้ำที่เตรียมไว้การละลาย: คนสารละลายอย่างสม่ำเสมอเพื่อให้สารเคมีละลายเข้ากันอย่างสมบูรณ์ การปล่อยให้เย็น: เมื่อสารเคมีละลายหมดแล้ว ให้ปล่อยสารละลายไว้จนอุณหภูมิกลับสู่ปกติก่อนดำเนินการในขั้นตอนต่อไป",
         makeup_s4:"เติม Zinc Purifier (PURISOL): เติมสาร PURISOL ในอัตราส่วน 4 ซีซีต่อน้ำ 1 ลิตร สารนี้มีคุณสมบัติเป็น Zinc Purifier ซึ่งจะช่วยจับและตกตะกอนสิ่งเจือปนที่อาจปนอยู่ในสารละลายชุบ การคนและการพัก: คนสารละลายให้เข้ากันดี จากนั้นปล่อยทิ้งไว้ข้ามคืนเพื่อให้สิ่งเจือปนต่างๆ ตกตะกอนลงสู่ก้นถัง",
         makeup_s5:"การกรอง: เมื่อสารตะกอนทั้งหมดตกลงสู่ก้นถังแล้ว ให้กรองสารละลายในถังเพื่อแยกตะกอนออก ทำให้ได้สารละลายที่ใสและบริสุทธิ์ การปรับระดับน้ำ: ปรับระดับน้ำในถังให้ได้ปริมาตรตามที่ต้องการ โดยอาจเติมน้ำสะอาดเพิ่มเข้าไปจนถึงระดับที่กำหนด เพื่อให้ความเข้มข้นของสารละลายมีความเหมาะสม",
-        makeup_s6:"เติม 111B: ค่อยๆ เติมสาร 111B ลงไปในถังทีละน้อย อัตราส่วน: เติมในอัตราส่วน 1 ลิตรต่อบ่อขนาด 1,000 ลิตร สาร 111B เป็นสารเคมีสำคัญที่ช่วยเพิ่มประสิทธิภาพและควบคุมคุณภาพของการชุบสังกะสีให้ได้ผลลัพธ์ที่ดีที่สุด",
+        makeup_s6:"เติม 111B: ค่อยๆ เติมสาร 111B ลงไปในถังทีละน้อย อัตราส่วน: เติมในอัตราส่วน 1 ลิตรต่อบ่อขนาด 1,000 ลิตร สาร 111B เป็นสารเคมีสำคัญที่ช่วยเพิ่มประสิทธิภาพและควบคุมคุณภาพของการชุบซิงค์หรือสังกะสีให้ได้ผลลัพธ์ที่ดีที่สุด",
 
         /* Maintenance */
         maint_h:"การบำรุงรักษา & การเติม",
