--- a/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
@@ -6,7 +6,7 @@
   <title data-i18n-key="title">Cyanide-free Zinc Plating — คู่มือเต็ม | Baume Chemical</title>
 
   <!-- SEO base -->
-  <meta name="description" content="คู่มือชุบสังกะสีแบบไม่ใช้ไซยาไนด์ (Cyanide-free): เปรียบเทียบกรด/ด่าง, สูตรเดินบ่อ, เงื่อนไขการทำงาน, ฟีเจอร์ 6 ข้อ, การเติมบ่อ, การแก้ปัญหา และความปลอดภัย">
+  <meta name="description" content="คู่มือชุบซิงค์หรือสังกะสีแบบไม่ใช้ไซยาไนด์ (Cyanide-free): เปรียบเทียบกรด/ด่าง, สูตรเดินบ่อ, เงื่อนไขการทำงาน, ฟีเจอร์ 6 ข้อ, การเติมบ่อ, การแก้ปัญหา และความปลอดภัย">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -575,7 +575,7 @@
       tr_burn: "<strong>ผิวไหม้บริเวณกระแสสูง:</strong> ปัญหานี้มักเกิดบริเวณที่มีกระแสไฟฟ้าสูงเกินไป สาเหตุหลักมาจาก กระแสที่สูงเกิน, การกวนน้ำยาไม่สม่ำเสมอ, คลอไรด์สูง, หรืออุณหภูมิและ pH ของน้ำยาที่ต่ำเกินไป การแก้ไขคือการปรับค่าพารามิเตอร์ต่างๆ ให้อยู่ในช่วงที่เหมาะสม",
       tr_haze: "<strong>ผิวมัวบริเวณกระแสต่ำ-กลาง:</strong> ผิวเคลือบมีลักษณะมัวหรือด้าน สาเหตุคือ ยาเงา (brightener) มีปริมาณน้อยเกินไป อุณหภูมิสูง หรือปริมาณ คลอไรด์ ไม่เหมาะสม นอกจากนี้ การ ปนเปื้อนของโลหะหนัก และสารอินทรีย์ก็เป็นสาเหตุสำคัญ",
       tr_pit: "<strong>ผิวเป็นหลุม/ตามด:</strong> เป็นรูพรุนเล็กๆ บนผิวเคลือบ เกิดจาก ยาเงามากเกินไป, คลอไรด์สูง หรือการ ปนเปื้อนของเหล็ก และสารอื่นๆ",
-      tr_spot: "<strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่:</strong> ผิวเคลือบไม่สม่ำเสมอเป็นหย่อมๆ สาเหตุหลักคือการ ปนเปื้อนโครเมียม, มี ยาเงามากเกินไป หรือการ ปนเปื้อนสารอินทรีย์ ที่ขัดขวางการเกาะตัวของสังกะสี",
+      tr_spot: "<strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่:</strong> ผิวเคลือบไม่สม่ำเสมอเป็นหย่อมๆ สาเหตุหลักคือการ ปนเปื้อนโครเมียม, มี ยาเงามากเกินไป หรือการ ปนเปื้อนสารอินทรีย์ ที่ขัดขวางการเกาะตัวของซิงค์หรือสังกะสี",
       tr_white: "<strong>เกิดคราบขาวก่อนจุ่มสี:</strong> คราบนี้มักเกิดขึ้นหลังการชุบและก่อนขั้นตอนทำสี (โครเมต) เนื่องจาก การล้างชิ้นงานไม่เพียงพอ, ทิ้งชิ้นงานไว้นานเกินไป หรือ น้ำยาโครเมตเสื่อมสภาพ",
       tr_rough: "<strong>ผิวขรุขระไม่เรียบ:</strong> ผิวเคลือบมีลักษณะหยาบคล้ายเม็ดทราย สาเหตุคือ แผ่นซิงค์ในบ่อมีมากเกินไป, ถุงผ้าที่ใส่แผ่นซิงค์ขาด, การ เป่าลมมากเกินไป, การใช้ ยาเงาอย่างสิ้นเปลือง หรืออุณหภูมิของบ่อชุบที่ ร้อนเกินไป",
 
