--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -331,7 +331,7 @@
     <div class="grid">
       <!-- Zinc -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/mSCLnxw.png" alt="ชุบสังกะสี Zinc Plating"></picture>
+        <picture><img src="https://i.imgur.com/mSCLnxw.png" alt="ชุบซิงค์หรือสังกะสี Zinc Plating"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Zinc</span><span class="badge">Corrosion Protection</span></div>
           <h3 data-i18n-key="zinc_title">ชุบซิงค์ (Zinc Plating)</h3>
